Update Dependabot and Mergify config to use new labels
Signed-off-by: Thane Thomson <connect@thanethomson.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,8 +7,8 @@ updates:
     target-branch: "main"
     open-pull-requests-limit: 10
     labels:
-      - T:dependencies
-      - S:automerge
+      - dependencies
+      - automerge
 
   - package-ecosystem: github-actions
     directory: "/"
@@ -17,8 +17,8 @@ updates:
     target-branch: "v0.37.x"
     open-pull-requests-limit: 10
     labels:
-      - T:dependencies
-      - S:automerge
+      - dependencies
+      - automerge
 
   - package-ecosystem: github-actions
     directory: "/"
@@ -27,8 +27,8 @@ updates:
     target-branch: "v0.34.x"
     open-pull-requests-limit: 10
     labels:
-      - T:dependencies
-      - S:automerge
+      - dependencies
+      - automerge
 
   ###################################
   ##
@@ -41,8 +41,8 @@ updates:
     target-branch: "main"
     open-pull-requests-limit: 10
     labels:
-      - T:dependencies
-      - S:automerge
+      - dependencies
+      - automerge
 
   - package-ecosystem: gomod
     directory: "/"
@@ -53,8 +53,8 @@ updates:
     # branches.
     open-pull-requests-limit: 0
     labels:
-      - T:dependencies
-      - S:automerge
+      - dependencies
+      - automerge
 
   - package-ecosystem: gomod
     directory: "/"
@@ -65,5 +65,5 @@ updates:
     # branches.
     open-pull-requests-limit: 0
     labels:
-      - T:dependencies
-      - S:automerge
+      - dependencies
+      - automerge
