--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -2,13 +2,13 @@ queue_rules:
   - name: default
     conditions:
       - base=main
-      - label=S:automerge
+      - label=automerge
 
 pull_request_rules:
   - name: Automerge to main
     conditions:
       - base=main
-      - label=S:automerge
+      - label=automerge
     actions:
       queue:
         method: squash
@@ -20,7 +20,7 @@ pull_request_rules:
   - name: backport patches to v0.37.x branch
     conditions:
       - base=main
-      - label=S:backport-to-v0.37.x
+      - label=backport-to-v0.37.x
     actions:
       backport:
         branches:
@@ -28,7 +28,7 @@ pull_request_rules:
   - name: backport patches to v0.34.x branch
     conditions:
       - base=main
-      - label=S:backport-to-v0.34.x
+      - label=backport-to-v0.34.x
     actions:
       backport:
         branches:
