Performed renaming in docker-related files

--- a/tools/tm-signer-harness/Dockerfile
+++ b/tools/tm-signer-harness/Dockerfile
@@ -1,4 +1,4 @@
-ARG TENDERMINT_VERSION=latest
-FROM tendermint/tendermint:${TENDERMINT_VERSION}
+ARG COMETBFT_VERSION=latest
+FROM cometbft/cometbft:${COMETBFT_VERSION}
 
 COPY tm-signer-harness /usr/bin/tm-signer-harness
