--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,9 @@ jobs:
         goarch: ["arm", "amd64"]
         goos: ["linux"]
     timeout-minutes: 5
+    # TODO(thane): Remove once we make the cometbft-db repository public.
+    env:
+      GOPRIVATE: github.com/cometbft/cometbft-db
     steps:
       - uses: actions/setup-go@v3
         with:
@@ -32,6 +35,9 @@ jobs:
             go.mod
             go.sum
             Makefile
+
+      # TODO(thane): Remove once we make the cometbft-db repository public.
+      - run: git config --global url.https://${{ secrets.GO_MODULES_TOKEN }}@github.com/.insteadOf https://github.com/
       - name: install
         run: GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} make build
         if: "env.GIT_DIFF != ''"
@@ -40,6 +46,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     timeout-minutes: 5
+    # TODO(thane): Remove once we make the cometbft-db repository public.
+    env:
+      GOPRIVATE: github.com/cometbft/cometbft-db
     steps:
       - uses: actions/setup-go@v3
         with:
@@ -51,6 +60,8 @@ jobs:
             **/*.go
             go.mod
             go.sum
+      # TODO(thane): Remove once we make the cometbft-db repository public.
+      - run: git config --global url.https://${{ secrets.GO_MODULES_TOKEN }}@github.com/.insteadOf https://github.com/
       - name: install
         run: make install_abci
         if: "env.GIT_DIFF != ''"
@@ -62,6 +73,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     timeout-minutes: 5
+    # TODO(thane): Remove once we make the cometbft-db repository public.
+    env:
+      GOPRIVATE: github.com/cometbft/cometbft-db
     steps:
       - uses: actions/setup-go@v3
         with:
@@ -73,6 +87,8 @@ jobs:
             **/*.go
             go.mod
             go.sum
+      # TODO(thane): Remove once we make the cometbft-db repository public.
+      - run: git config --global url.https://${{ secrets.GO_MODULES_TOKEN }}@github.com/.insteadOf https://github.com/
       - name: install
         run: make install install_abci
         if: "env.GIT_DIFF != ''"
