--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,6 +15,9 @@ jobs:
       fail-fast: false
       matrix:
         part: ["00", "01", "02", "03", "04", "05"]
+    # TODO(thane): Remove once we make the cometbft-db repository public.
+    env:
+      GOPRIVATE: github.com/cometbft/cometbft-db
     steps:
       - uses: actions/setup-go@v3
         with:
@@ -28,6 +31,8 @@ jobs:
             go.mod
             go.sum
             Makefile
+      # TODO(thane): Remove once we make the cometbft-db repository public.
+      - run: git config --global url.https://${{ secrets.GO_MODULES_TOKEN }}@github.com/.insteadOf https://github.com/
       - name: Run Go Tests
         run: |
           make test-group-${{ matrix.part }} NUM_SPLIT=6
