[backport] Renaming in docker-related files (#123)
* [cherry-picked] Renaming in docker-related files (#110)

* Performed renaming in docker-related files

* Fix e2e launch

* Rename TENDERMINT_BUILD_OPTIONS to COMETBFT_BUILD_OPTIONS all over

* Revert `cometbft-proof` to `tendermint-proof`

* Replaced TENDERMINT_VERSION --> COMETBFT_VERSION all over the codebase

--- a/tools/tm-signer-harness/Makefile
+++ b/tools/tm-signer-harness/Makefile
@@ -1,9 +1,9 @@
 .PHONY: build install docker-image
 
-TENDERMINT_VERSION?=latest
-BUILD_TAGS?='tendermint'
+COMETBFT_VERSION?=latest
+BUILD_TAGS?='cometbft'
 VERSION := $(shell git describe --always)
-BUILD_FLAGS = -ldflags "-X github.com/tendermint/tendermint/version.TMCoreSemVer=$(VERSION)
+BUILD_FLAGS = -ldflags "-X github.com/cometbft/cometbft/version.TMCoreSemVer=$(VERSION)
 
 .DEFAULT_GOAL := build
 
@@ -16,6 +16,6 @@ install:
 docker-image:
 	GOOS=linux GOARCH=amd64 go build $(BUILD_FLAGS) -tags $(BUILD_TAGS) -o tm-signer-harness main.go
 	docker build \
-		--build-arg TENDERMINT_VERSION=$(TENDERMINT_VERSION) \
-		-t tendermint/tm-signer-harness:$(TENDERMINT_VERSION) .
+		--build-arg COMETBFT_VERSION=$(COMETBFT_VERSION) \
+		-t tendermint/tm-signer-harness:$(COMETBFT_VERSION) .
 	rm -rf tm-signer-harness
