--- a/DOCKER/Dockerfile
+++ b/DOCKER/Dockerfile
@@ -1,27 +1,27 @@
-# stage 1 Generate Tendermint Binary
+# stage 1 Generate CometBFT Binary
 FROM golang:1.18-alpine as builder
 RUN apk update && \
     apk upgrade && \
     apk --no-cache add make
-COPY / /tendermint
-WORKDIR /tendermint
+COPY / /cometbft
+WORKDIR /cometbft
 RUN make build-linux
 
 # stage 2
 FROM golang:1.18-alpine
-LABEL maintainer="hello@tendermint.com"
+LABEL maintainer="hello@informal.systems"
 
-# Tendermint will be looking for the genesis file in /tendermint/config/genesis.json
+# CometBFT will be looking for the genesis file in /cometbft/config/genesis.json
 # (unless you change `genesis_file` in config.toml). You can put your config.toml and
-# private validator file into /tendermint/config.
+# private validator file into /cometbft/config.
 #
-# The /tendermint/data dir is used by tendermint to store state.
-ENV TMHOME /tendermint
+# The /cometbft/data dir is used by CometBFT to store state.
+ENV TMHOME /cometbft
 
 # OS environment setup
 # Set user right away for determinism, create directory for persistence and give our user ownership
 # jq and curl used for extracting `pub_key` from private validator while
-# deploying tendermint with Kubernetes. It is nice to have bash so the users
+# deploying CometBFT with Kubernetes. It is nice to have bash so the users
 # could execute bash commands.
 RUN apk update && \
     apk upgrade && \
@@ -39,11 +39,11 @@ EXPOSE 26656 26657 26660
 
 STOPSIGNAL SIGTERM
 
-COPY --from=builder /tendermint/build/tendermint /usr/bin/tendermint
+COPY --from=builder /cometbft/build/cometbft /usr/bin/cometbft
 
 # You can overwrite these before the first run to influence
 # config.json and genesis.json. Additionally, you can override
-# CMD to add parameters to `tendermint node`.
+# CMD to add parameters to `cometbft node`.
 ENV PROXY_APP=kvstore MONIKER=dockernode CHAIN_ID=dockerchain
 
 COPY ./DOCKER/docker-entrypoint.sh /usr/local/bin/
