--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -31,3 +31,7 @@ gem "wdm", "~> 0.1.1", :platforms => [:mingw, :x64_mingw, :mswin]
 gem "http_parser.rb", "~> 0.6.0", :platforms => [:jruby]
 
 gem 'jekyll-titles-from-headings'
+
+gem 'html-proofer'
+
+gem 'jekyll-sass-converter'
