--- a/networks/local/localnode/Dockerfile
+++ b/networks/local/localnode/Dockerfile
@@ -4,7 +4,7 @@ RUN apk update && \
     apk upgrade && \
     apk --no-cache add curl jq file
 
-VOLUME [ /cometbft ]
+VOLUME /cometbft
 WORKDIR /cometbft
 EXPOSE 26656 26657
 ENTRYPOINT ["/usr/bin/wrapper.sh"]
