--- a/.github/workflows/e2e-nightly-34x.yml
+++ b/.github/workflows/e2e-nightly-34x.yml
@@ -20,6 +20,12 @@ jobs:
         group: ['00', '01', '02', '03']
     runs-on: ubuntu-latest
     timeout-minutes: 60
+    # TODO (thane): Remove once we make the cometbft-db repository public.
+    env:
+      GOPRIVATE: github.com/cometbft/cometbft-db
+      # We have to supply this as an environment variable in order to pass it
+      # through to the "docker" Makefile target in ./test/e2e
+      GO_MODULES_TOKEN: ${{ secrets.GO_MODULES_TOKEN }}
     steps:
       - uses: actions/setup-go@v3
         with:
@@ -34,6 +40,9 @@ jobs:
         # Run make jobs in parallel, since we can't run steps in parallel.
         run: make -j2 docker generator runner
 
+      # TODO(thane): Remove once we make the cometbft-db repository public
+      - run: git config --global url.https://${{ secrets.GO_MODULES_TOKEN }}@github.com/.insteadOf https://github.com/
+      
       - name: Generate testnets
         working-directory: test/e2e
         # When changing -g, also change the matrix groups above
