--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,6 +12,9 @@ jobs:
     name: golangci-lint
     runs-on: ubuntu-latest
     timeout-minutes: 8
+    # TODO(thane): Remove once we make the cometbft-db repository public.
+    env:
+      GOPRIVATE: github.com/cometbft/cometbft-db
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
@@ -23,6 +26,8 @@ jobs:
             **/**.go
             go.mod
             go.sum
+      # TODO(thane): Remove once we make the cometbft-db repository public.
+      - run: git config --global url.https://${{ secrets.GO_MODULES_TOKEN }}@github.com/.insteadOf https://github.com/
       - uses: golangci/golangci-lint-action@v3
         with:
           # Required: the version of golangci-lint is required and
