--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,6 +15,7 @@ jobs:
     steps:
       - uses: rokroskar/workflow-run-cleanup-action@master
         env:
+          # ToDo (thane): Remove once we make cometbft-db public
           GOPRIVATE: github.com/cometbft/cometbft-db
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
     if: "!startsWith(github.ref, 'refs/tags/') && github.ref != 'refs/heads/master'"
@@ -34,6 +35,8 @@ jobs:
             **/**.go
             go.mod
             go.sum
+      # Todo (thane): Remove once we make cometbft-db public
+      - run: git config --global url.https://${{ secrets.GO_MODULES_TOKEN }}@github.com/.insteadOf https://github.com/
       - name: install
         run: make install install_abci
         if: "env.GIT_DIFF != ''"
@@ -66,6 +69,8 @@ jobs:
             **/**.go
             go.mod
             go.sum
+      # Todo (thane): Remove once we make cometbft-db public
+      - run: git config --global url.https://${{ secrets.GO_MODULES_TOKEN }}@github.com/.insteadOf https://github.com/
       - uses: actions/cache@v3
         with:
           path: ~/go/pkg/mod
@@ -98,6 +103,8 @@ jobs:
             **/**.go
             go.mod
             go.sum
+      # Todo (thane): Remove once we make cometbft-db public
+      - run: git config --global url.https://${{ secrets.GO_MODULES_TOKEN }}@github.com/.insteadOf https://github.com/
       - uses: actions/cache@v3
         with:
           path: ~/go/pkg/mod
@@ -129,6 +136,8 @@ jobs:
             **/**.go
             go.mod
             go.sum
+      # Todo (thane): Remove once we make cometbft-db public
+      - run: git config --global url.https://${{ secrets.GO_MODULES_TOKEN }}@github.com/.insteadOf https://github.com/
       - uses: actions/cache@v3
         with:
           path: ~/go/pkg/mod
