--- a/.github/workflows/testapp-docker.yml
+++ b/.github/workflows/testapp-docker.yml
@@ -62,4 +62,4 @@ jobs:
           tags: ${{ steps.prep.outputs.tags }}
           # TODO(thane): Remove when we publish cometbft-db repository.
           build-args:
-            - GO_MODULES_TOKEN=${{ secrets.GO_MODULES_TOKEN }}
+            - "GO_MODULES_TOKEN=${{ secrets.GO_MODULES_TOKEN }}"
