--- a/.github/workflows/cometbft-docker.yml
+++ b/.github/workflows/cometbft-docker.yml
@@ -11,7 +11,7 @@ on:
       - "v[0-9]+.[0-9]+.[0-9]+-beta.[0-9]+"   # e.g. v0.37.0-beta.1, v0.38.0-beta.10
       - "v[0-9]+.[0-9]+.[0-9]+-rc[0-9]+"      # e.g. v0.37.0-rc1, v0.38.0-rc10
   pull_request:
-    
+
 
 jobs:
   build:
@@ -60,5 +60,5 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.prep.outputs.tags }}
-          build-args:
-            - "GO_MODULES_TOKEN=${{ secrets.GO_MODULES_TOKEN }}"
+          build-args: |
+            GO_MODULES_TOKEN=${{ secrets.GO_MODULES_TOKEN }}
