--- a/.github/workflows/cometbft-docker.yml
+++ b/.github/workflows/cometbft-docker.yml
@@ -61,5 +61,5 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.prep.outputs.tags }}
           # TODO(thane): Remove when we publish cometbft-db repository.
-          build-args:
-            - "GO_MODULES_TOKEN=${{ secrets.GO_MODULES_TOKEN }}"
+          build-args: |
+            GO_MODULES_TOKEN=${{ secrets.GO_MODULES_TOKEN }}
