--- a/.github/workflows/cometbft-docker.yml
+++ b/.github/workflows/cometbft-docker.yml
@@ -60,4 +60,5 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.prep.outputs.tags }}
-          build-args: GO_MODULES_TOKEN=${{ secrets.GO_MODULES_TOKEN }}
+          build-args: |
+            "GO_MODULES_TOKEN=${{ secrets.GO_MODULES_TOKEN }}"
