replace tm-db for cometbft-db (#162)
* Reproducing the work done on #133, for branch v0.37.x

* Updated docker related changes

* Removed extra comments

Co-authored-by: Jasmina Malicevic <jasmina.dustinac@gmail.com>

--- a/.github/workflows/cometbft-docker.yml
+++ b/.github/workflows/cometbft-docker.yml
@@ -58,3 +58,6 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.prep.outputs.tags }}
+          # TODO(thane): Remove when we publish cometbft-db repository.
+          build-args: |
+            GO_MODULES_TOKEN=${{ secrets.GO_MODULES_TOKEN }}
