--- a/test/e2e/docker/Dockerfile
+++ b/test/e2e/docker/Dockerfile
@@ -10,6 +10,12 @@ RUN apt-get -qq install -y libleveldb-dev librocksdb-dev >/dev/null
 ENV COMETBFT_BUILD_OPTIONS badgerdb,boltdb,cleveldb,rocksdb
 WORKDIR /src/cometbft
 
+# TODO(thane): Remove once we publish the cometbft-db repository.
+ENV GOPRIVATE=github.com/cometbft/cometbft-db
+ARG GO_MODULES_TOKEN
+RUN git config \
+	--global url.https://${GO_MODULES_TOKEN}@github.com/.insteadOf https://github.com/
+
 # Fetch dependencies separately (for layer caching)
 COPY go.mod go.sum ./
 RUN go mod download
