replace tmdb with comedb in 0.34 (#160)
* replace tmdb with comedb in 0.34

* updates to workflow files

* e2e test docker files

* updated cometbft-docker
Co-authored-by: Thane Thomson <connect@thanethomson.com>

* reordered commands in Dockerfile

* Applied Thanes fix for dockerfiles

Co-authored-by: Thane Thomson <connect@thanethomson.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - uses: rokroskar/workflow-run-cleanup-action@master
         env:
+          # ToDo (thane): Remove once we make cometbft-db public
+          GOPRIVATE: github.com/cometbft/cometbft-db
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
     if: "!startsWith(github.ref, 'refs/tags/') && github.ref != 'refs/heads/master'"
 
@@ -33,6 +35,8 @@ jobs:
             **/**.go
             go.mod
             go.sum
+      # Todo (thane): Remove once we make cometbft-db public
+      - run: git config --global url.https://${{ secrets.GO_MODULES_TOKEN }}@github.com/.insteadOf https://github.com/
       - name: install
         run: make install install_abci
         if: "env.GIT_DIFF != ''"
@@ -65,6 +69,8 @@ jobs:
             **/**.go
             go.mod
             go.sum
+      # Todo (thane): Remove once we make cometbft-db public
+      - run: git config --global url.https://${{ secrets.GO_MODULES_TOKEN }}@github.com/.insteadOf https://github.com/
       - uses: actions/cache@v3
         with:
           path: ~/go/pkg/mod
@@ -97,6 +103,8 @@ jobs:
             **/**.go
             go.mod
             go.sum
+      # Todo (thane): Remove once we make cometbft-db public
+      - run: git config --global url.https://${{ secrets.GO_MODULES_TOKEN }}@github.com/.insteadOf https://github.com/
       - uses: actions/cache@v3
         with:
           path: ~/go/pkg/mod
@@ -128,6 +136,8 @@ jobs:
             **/**.go
             go.mod
             go.sum
+      # Todo (thane): Remove once we make cometbft-db public
+      - run: git config --global url.https://${{ secrets.GO_MODULES_TOKEN }}@github.com/.insteadOf https://github.com/
       - uses: actions/cache@v3
         with:
           path: ~/go/pkg/mod
