--- a/DOCKER/Dockerfile
+++ b/DOCKER/Dockerfile
@@ -2,14 +2,22 @@
 FROM golang:1.18-alpine as builder
 RUN apk update && \
     apk upgrade && \
-    apk --no-cache add make
+    apk --no-cache add make git 
 COPY / /cometbft
 WORKDIR /cometbft
+# TODO(thane): Remove once we publish the cometbft-db repository.
+ENV GOPRIVATE=github.com/cometbft/cometbft-db
+ARG GO_MODULES_TOKEN
+RUN apk --no-cache add git && git config --global "url.https://${GO_MODULES_TOKEN}@github.com/".insteadOf "https://github.com/"
 RUN make build-linux
 
 # stage 2
 FROM golang:1.18-alpine
+
+
+
 LABEL maintainer="hello@informal.systems"
+
 
 # CometBFT will be looking for the genesis file in /cometbft/config/genesis.json
 # (unless you change `genesis_file` in config.toml). You can put your config.toml and
