--- a/.github/workflows/testapp-docker.yml
+++ b/.github/workflows/testapp-docker.yml
@@ -10,8 +10,6 @@ on:
       - "v[0-9]+.[0-9]+.[0-9]+-alpha.[0-9]+"  # e.g. v0.37.0-alpha.1, v0.38.0-alpha.10
       - "v[0-9]+.[0-9]+.[0-9]+-beta.[0-9]+"   # e.g. v0.37.0-beta.1, v0.38.0-beta.10
       - "v[0-9]+.[0-9]+.[0-9]+-rc[0-9]+"      # e.g. v0.37.0-rc1, v0.38.0-rc10
-  # TODO(thane): Remove once we make the cometbft-db repository public.
-  pull_request:
 
 jobs:
   build:
@@ -58,8 +56,8 @@ jobs:
           context: .
           file: ./test/e2e/docker/Dockerfile
           platforms: linux/amd64,linux/arm64
-          push: ${{ github.event_name != 'beep_boop' }}
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.prep.outputs.tags }}
           # TODO(thane): Remove when we publish cometbft-db repository.
-          build-args:
-            - GO_MODULES_TOKEN=${{ secrets.GO_MODULES_TOKEN }}
+          build-args: |
+            GO_MODULES_TOKEN=${{ secrets.GO_MODULES_TOKEN }}
