debug: Check protoc version in CI
Signed-off-by: Thane Thomson <connect@thanethomson.com>

--- a/.github/workflows/check-generated.yml
+++ b/.github/workflows/check-generated.yml
@@ -66,6 +66,7 @@ jobs:
 
           go install github.com/bufbuild/buf/cmd/buf
           go install github.com/cosmos/gogoproto/protoc-gen-gogofaster@latest
+          protoc --version
 
           make proto-gen
 
