Revert "debug: Explicitly install cosmos/gogoproto v1.4.3"
This reverts commit 34eeb25587929e08723d6d6ded0ebefdaeec7272.

--- a/.github/workflows/check-generated.yml
+++ b/.github/workflows/check-generated.yml
@@ -65,7 +65,7 @@ jobs:
           export GOBIN="${tools}/bin"
 
           go install github.com/bufbuild/buf/cmd/buf@latest
-          go install github.com/cosmos/gogoproto/protoc-gen-gogofaster@v1.4.3
+          go install github.com/cosmos/gogoproto/protoc-gen-gogofaster@latest
 
           make proto-gen
 
