ci: Add Buf API token for linting of private repos
Signed-off-by: Thane Thomson <connect@thanethomson.com>

--- a/.github/workflows/proto-lint.yml
+++ b/.github/workflows/proto-lint.yml
@@ -19,3 +19,4 @@ jobs:
       - uses: bufbuild/buf-lint-action@v1
         with:
           input: 'proto'
+          buf_token: ${{ secrets.BUF_API_TOKEN }}
