--- a/.github/workflows/proto-lint.yml
+++ b/.github/workflows/proto-lint.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: bufbuild/buf-setup-action@v1.12.0
         with:
           github_token: ${{ secrets.BUF_GITHUB_API_TOKEN }}
-          buf_token: ${{ secrets.BUF_API_TOKEN }}
+          buf_api_token: ${{ secrets.BUF_API_TOKEN }}
       - uses: bufbuild/buf-lint-action@v1
         with:
           input: 'proto'
