--- a/.github/workflows/check-generated.yml
+++ b/.github/workflows/check-generated.yml
@@ -40,6 +40,7 @@ jobs:
             echo ">> Generated mocks require update (either Mockery or source files may have changed)."
             echo ">> Ensure your tools are up-to-date, re-run 'make mockery' and update this PR."
             echo ">>"
+            git diff
             exit 1
           fi
 
@@ -48,7 +49,7 @@ jobs:
     steps:
       - uses: actions/setup-go@v3
         with:
-          go-version: "1.18"
+          go-version: "1.19"
 
       - uses: actions/checkout@v3
         with:
@@ -58,15 +59,6 @@ jobs:
         run: |
           set -euo pipefail
 
-          # Install buf and gogo tools, so that differences that arise from
-          # toolchain differences are also caught.
-          readonly tools="$(mktemp -d)"
-          export PATH="${PATH}:${tools}/bin"
-          export GOBIN="${tools}/bin"
-
-          go install github.com/bufbuild/buf/cmd/buf
-          go install github.com/cosmos/gogoproto/protoc-gen-gogofaster@latest
-
           make proto-gen
 
           if ! git diff --stat --exit-code ; then
@@ -75,5 +67,6 @@ jobs:
             echo ">> Protobuf generated code requires update (either tools or .proto files may have changed)."
             echo ">> Ensure your tools are up-to-date, re-run 'make proto-gen' and update this PR."
             echo ">>"
+            git diff
             exit 1
           fi
