PR 179 missed this one liner, which does not affect the check but make failures more debuggable

--- a/.github/workflows/check-generated.yml
+++ b/.github/workflows/check-generated.yml
@@ -66,5 +66,6 @@ jobs:
             echo ">> Protobuf generated code requires update (either tools or .proto files may have changed)."
             echo ">> Ensure your tools are up-to-date, re-run 'make proto-gen' and update this PR."
             echo ">>"
+            git diff
             exit 1
           fi
