--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -21,12 +21,12 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
       - name: Lint Code Base
-        uses: docker://github/super-linter:v3
+        uses: docker://github/super-linter:v4
         env:
-          LINTER_RULES_PATH: .
           VALIDATE_ALL_CODEBASE: true
           DEFAULT_BRANCH: v0.34.x
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VALIDATE_MD: true
           VALIDATE_OPENAPI: true
+          YAML_CONFIG_FILE: yaml-lint.yml
           VALIDATE_YAML: true
