--- a/.github/workflows/markdown-linter.yml
+++ b/.github/workflows/markdown-linter.yml
@@ -1,4 +1,4 @@
-name: Lint
+name: Markdown Linter
 on:
   push:
     branches:
@@ -28,5 +28,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VALIDATE_MD: true
           VALIDATE_OPENAPI: true
-          YAML_CONFIG_FILE: yaml-lint.yml
           VALIDATE_YAML: true
+          YAML_CONFIG_FILE: yaml-lint.yml
