trying to disable linter for k8s

--- a/.github/linters/markdownlint.yml
+++ b/.github/linters/markdownlint.yml
@@ -13,3 +13,4 @@ MD025: false
 MD033: {no-inline-html: false}
 no-hard-tabs: false
 whitespace: false
+FILTER_REGEX_EXCLUDE: "tools/mintnet-kubernetes"
