--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,5 +63,4 @@ networks:
     ipam:
       driver: default
       config:
-        -
-        subnet: 192.167.10.0/16
+        - subnet: 192.167.10.0/16
