--- a/.github/workflows/cometbft-docker.yml
+++ b/.github/workflows/cometbft-docker.yml
@@ -4,6 +4,7 @@ name: Docker
 on:
   push:
     branches:
+      - main
       - v0.34.x
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+"               # Push events to matching v*, i.e. v1.0, v20.15.10
