ci: replace main/master with 0.34.x in workflow. yml (#172)
* Added main/master with 0.34.x

* Making generate .yml the same as in main

* Update mock generation and mock files

* Added enveloper peer

* Fix evidence test

* Fixed failing tests

* super linter fix

* Backporting linter refactorings from main

* fix some superlinter errors

* fixing linter errors

* linter

* Removed k8s

* updated mocks

* Fix yaml files

* renamed workflow file to use main instead of master

* Applied PR comments

* Fixed linter errors

--- a/.github/workflows/check-generated.yml
+++ b/.github/workflows/check-generated.yml
@@ -7,6 +7,7 @@ name: Check generated code
 on:
   pull_request:
     branches:
+      - main
       - v0.34.x
 
 permissions:
@@ -16,7 +17,7 @@ jobs:
   check-mocks:
     runs-on: ubuntu-latest
     # TODO (thane): Remove once we make the cometbft-db repository public
-    env: 
+    env:
       GOPRIVATE: github.com/cometbft/cometbft-db
     steps:
       - uses: actions/setup-go@v3
@@ -24,15 +25,13 @@ jobs:
           go-version: '1.18'
 
       - uses: actions/checkout@v3
-      
+
       # TODO (thane): Remove once we make the cometbft-db repository public
-      - run : git config --global url.https://${{ secrets.GO_MODULES_TOKEN }}@github.com/.insteadOf https://github.com/
+      - run: git config --global url.https://${{ secrets.GO_MODULES_TOKEN }}@github.com/.insteadOf https://github.com/
       - name: "Check generated mocks"
         run: |
           set -euo pipefail
 
-          readonly MOCKERY=2.12.3  # N.B. no leading "v"
-          curl -sL "https://github.com/vektra/mockery/releases/download/v${MOCKERY}/mockery_${MOCKERY}_Linux_x86_64.tar.gz" | tar -C /usr/local/bin -xzf -
           make mockery 2>/dev/null
 
           if ! git diff --stat --exit-code ; then
