--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -5,7 +5,8 @@ on:
   pull_request:
   push:
     branches:
-      - master
+      - v0.34.x
+      - main
       - release/**
 
 jobs:
@@ -32,7 +33,6 @@ jobs:
 
       # TODO(thane): Remove once we make the cometbft-db repository public.
       - run: git config --global url.https://${{ secrets.GO_MODULES_TOKEN }}@github.com/.insteadOf https://github.com/
-      
 
       - name: Build
         working-directory: test/e2e
