--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,7 +6,8 @@ on:
   pull_request:
   push:
     branches:
-      - master
+      - main
+      - v0.34.x
 jobs:
   golangci:
     name: golangci-lint
