Added super linter trigger;

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -9,7 +9,7 @@ on:
       - "**.yml"
       - "**.yaml"
   pull_request:
-    branches: [main]
+    branches: [v0.37.x]
     paths:
       - "**.md"
       - "**.yml"
