ci: Replace main with 0.37 in workflows (#195)
* Added v0.37.x to workflow files

* minor

* Added super linter trigger;

* added tags to makefile

* revert tag addition as it does not help

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -3,12 +3,13 @@ on:
   push:
     branches:
       - main
+      - v0.37.x
     paths:
       - "**.md"
       - "**.yml"
       - "**.yaml"
   pull_request:
-    branches: [main]
+    branches: [v0.37.x]
     paths:
       - "**.md"
       - "**.yml"
