--- a/docs/package.json
+++ b/docs/package.json
@@ -1,7 +1,7 @@
 {
   "name": "docs",
   "version": "1.0.0",
-  "description": "Tendermint Core Documentation",
+  "description": "CometBFT Documentation",
   "main": "index.js",
   "dependencies": {
     "vuepress-theme-cosmos": "^1.0.183"
