Replacing TMHOME for CMTHOME. On reading the environment variable we still try TMHOME if CMTHOME is not found. TMHOME is deprecated and will be removed in the future releases.

--- a/test/e2e/docker/Dockerfile
+++ b/test/e2e/docker/Dockerfile
@@ -32,7 +32,7 @@ RUN cd test/e2e && make node && cp build/node /usr/bin/app
 # e.g. leveldb and rocksdb which are already installed in the build image.
 WORKDIR /cometbft
 VOLUME /cometbft
-ENV TMHOME=/cometbft
+ENV CMTHOME=/cometbft
 
 EXPOSE 26656 26657 26660 6060
 ENTRYPOINT ["/usr/bin/entrypoint"]
