--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@
 .revision
 .tendermint
 .tendermint-lite
+.cometbft
+.cometbft-lite
 .terraform
 .vagrant
 .vendor-new/
@@ -31,6 +33,7 @@ libs/pubsub/query/fuzz_test/output
 profile\.out
 remote_dump
 rpc/test/.tendermint
+rpc/test/.cometbft
 scripts/cutWALUntil/cutWALUntil
 scripts/wal2json/wal2json
 shunit2
