main: rename TMHOME to CMTHOME (#212)
* Renames cmd/tendermint to cmd/cometbft

* Replacing TMHOME for CMTHOME. On reading the environment variable we still try TMHOME if CMTHOME is not found. TMHOME is deprecated and will be removed in the future releases.

* Include TMHOME deprecation in the changelog

* Updating the config

* updating uses of .tendermint to .cometbft

* Updating the Makefile

* Fix test of debug level flags.

* Update .changelog/unreleased/breaking-changes/211-deprecate-tmhome.md

Co-authored-by: Thane Thomson <connect@thanethomson.com>

---------

Co-authored-by: Thane Thomson <connect@thanethomson.com>

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,19 @@
 .bak
 *.bak
 .DS_Store
+.idea/
+.revision
+.tendermint
+.tendermint-lite
+.cometbft
+.cometbft-lite
+.terraform
+.vagrant
+.vendor-new/
+.vscode/
+abci/abci-cli
+addrbook.json
+artifacts/*
 build/*
 rpc/test/.tendermint
 .tendermint
@@ -24,7 +37,12 @@ abci-cli
 docs/node_modules/
 docs/.vuepress/public/rpc
 index.html.md
-
+libs/pubsub/query/fuzz_test/output
+profile\.out
+remote_dump
+rpc/test/.tendermint
+rpc/test/.cometbft
+scripts/cutWALUntil/cutWALUntil
 scripts/wal2json/wal2json
 scripts/cutWALUntil/cutWALUntil
 
