--- a/.github/workflows/e2e-manual-multiversion.yml
+++ b/.github/workflows/e2e-manual-multiversion.yml
@@ -1,11 +1,11 @@
-# Runs randomly generated E2E testnets nightly on main
-# manually run e2e tests
-name: e2e-manual
+# Manually run the nightly E2E tests for a particular branch, but test with
+# multiple versions.
+name: e2e-manual-multiversion
 on:
   workflow_dispatch:
 
 jobs:
-  e2e-nightly-test:
+  e2e-manual-multiversion-test:
     # Run parallel jobs for the listed testnet groups (must match the
     # ./build/generator -g flag)
     strategy:
@@ -14,21 +14,12 @@ jobs:
         group: ['00', '01', '02', '03', '04']
     runs-on: ubuntu-latest
     timeout-minutes: 60
-    # TODO(thane): Remove once we make the cometbft-db repository public.
-    env:
-      GOPRIVATE: github.com/cometbft/cometbft-db
-      # We have to supply this as an environment variable in order to pass it
-      # through to the "docker" Makefile target in ./test/e2e
-      GO_MODULES_TOKEN: ${{ secrets.GO_MODULES_TOKEN }}
     steps:
       - uses: actions/setup-go@v3
         with:
           go-version: '1.18'
 
       - uses: actions/checkout@v3
-
-      # TODO(thane): Remove once we make the cometbft-db repository public.
-      - run: git config --global url.https://${{ secrets.GO_MODULES_TOKEN }}@github.com/.insteadOf https://github.com/
 
       - name: Build
         working-directory: test/e2e
@@ -38,7 +29,9 @@ jobs:
       - name: Generate testnets
         working-directory: test/e2e
         # When changing -g, also change the matrix groups above
-        run: ./build/generator -g 5 -d networks/nightly/
+        # Generate multi-version tests with double the quantity of E2E nodes
+        # based on the current branch as compared to the latest version.
+        run: ./build/generator -g 5 -m "latest:1,local:2" -d networks/nightly/
 
       - name: Run ${{ matrix.p2p }} p2p testnets
         working-directory: test/e2e
