ci: Do not suppress output of "make mockery"
Signed-off-by: Thane Thomson <connect@thanethomson.com>

--- a/.github/workflows/check-generated.yml
+++ b/.github/workflows/check-generated.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           set -euo pipefail
 
-          make mockery 2>/dev/null
+          make mockery
 
           if ! git diff --stat --exit-code ; then
             echo ">> ERROR:"
