Adjust retention to support evidence gathering

--- a/test/e2e/networks/long.toml
+++ b/test/e2e/networks/long.toml
@@ -2,7 +2,7 @@ ipv6 = true
 initial_height = 2
 key_type = ""
 abci_protocol = "tcp"
-upgrade_version = "cometbft/e2e-node:local"
+upgrade_version = "cometbft/e2e-node:local-version"
 load_tx_size_bytes = 0
 load_tx_batch_size = 100
 load_tx_connections = 0
@@ -69,13 +69,13 @@ load_tx_connections = 0
     seeds = ["seed01"]
     database = "badgerdb"
     privval_protocol = "unix"
-    start_at = 0
+    start_at = 0 
     fast_sync = "v0"
     mempool_version = "v0"
     state_sync = false
     persist_interval = 5
     snapshot_interval = 3
-    retain_blocks = 5
+    retain_blocks = 10
     perturb = ["upgrade"]
     send_no_load = false
   [node.seed01]
@@ -89,7 +89,7 @@ load_tx_connections = 0
     state_sync = false
     persist_interval = 5
     snapshot_interval = 0
-    retain_blocks = 5
+    retain_blocks = 7 
     perturb = ["upgrade"]
     send_no_load = false
   [node.validator01]
@@ -136,7 +136,7 @@ load_tx_connections = 0
     state_sync = false
     persist_interval = 1
     snapshot_interval = 0
-    retain_blocks = 1
+    retain_blocks = 7
     perturb = []
     send_no_load = false
     [node.validator03.misbehaviors]
@@ -213,7 +213,7 @@ load_tx_connections = 0
     start_at = 1000
     fast_sync = "v0"
     mempool_version = "v0"
-    state_sync = false
+    state_sync = false 
     persist_interval = 5
     snapshot_interval = 3
     retain_blocks = 0
@@ -229,7 +229,7 @@ load_tx_connections = 0
     start_at = 2000
     fast_sync = "v0"
     mempool_version = "v0"
-    state_sync = false
+    state_sync = true
     persist_interval = 5
     snapshot_interval = 3
     retain_blocks = 0
@@ -245,7 +245,7 @@ load_tx_connections = 0
     start_at = 3000
     fast_sync = "v0"
     mempool_version = "v0"
-    state_sync = false
+    state_sync = false 
     persist_interval = 5
     snapshot_interval = 3
     retain_blocks = 0
